# april

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  NEWS  README  README.md  TODO  id  index.html  params.json
april/: README  april.dox  april.h  april_config.h  april_config.h.in  april_debug.cc  april_debug.h  april_global.h  april_version.h  april_version.h.in  aprillibrary.cc  aprillibrary.h
april/AprilDream/: README  aprildream-main.cc  aprildream.qrc  win-res.rc
april/AprilDream/gui/: cmdlog.cc  cmdlog.h  cmdlog.ui  dnaeditordlg.cc  dnaeditordlg.h  dnaeditordlg.ui  dock.cc  dock.h  dockcmdlog.cc  dockcmdlog.h  dockcrtsel.cc  dockcrtsel.h  dockids.cc  dockids.h  docktree.cc  docktree.h  dockworld.cc  dockworld.h  mw.cc  mw.h  mw.ui  newactordlg.cc  newactordlg.h  newactordlg.ui  newworlddlg.cc  newworlddlg.h  newworlddlg.ui  pluginsdlg.cc  pluginsdlg.h  pluginsdlg.ui  sceneviewer.cc  sceneviewer.h
april/abstracta/: README  aamodule.cc  aamodule.h  aaoutput.cc  aaoutput.h  aatokenizer.cc  aatokenizer.h  abstracta-main.cc  abstracta.qrc  abstractapril.cc  abstractapril.h  commandmap.cc  commandmap.h
april/abstracta/modules/: aaapril.cc  aaapril.h  aadna.cc  aadna.h  aaplugins.cc  aaplugins.h  aaworld.cc  aaworld.h
april/cmd/: README  aamodule.cc  aamodule.h  aatokenizer.cc  aatokenizer.h  aprilmodule.cc  aprilmodule.h  apriltokenizer.cc  apriltokenizer.h  commandmap.cc  commandmap.h
april/cmd/modules/: README  aaapril.cc  aaapril.h  aadna.cc  aadna.h  aaplugins.cc  aaplugins.h  aaworld.cc  aaworld.h  amodactor.cc  amodactor.h  amodactuator.cc  amodactuator.h  amodapril.cc  amodapril.h  amodbrain.cc  amodbrain.h  amoddna.cc  amoddna.h  amodevents.cc  amodevents.h  amodid.cc  amodid.h  amodplugins.cc  amodplugins.h  amodreflex.cc  amodreflex.h  amodsensor.cc  amodsensor.h  amodworld.cc  amodworld.h
april/docs/: AprilDream.dox  abstract-april.dox  april-cmd.dox  april-core.dox  april-gui.dox  building.dox  saving.dox
april/ignore-recicler/: build-run-all.sh  build-run.sh  copy of create-new.sh  create-new.sh  ignore-build-run-all.sh
april/logic/: aaoutput.cc  aaoutput.h  actor.cc  actor.h  actorcomp.cc  actorcomp.h  actorfactory.cc  actorfactory.h  actuator.cc  actuator.h  actuatorfactory.cc  actuatorfactory.h  aoutput.cc  aoutput.h  brain.cc  brain.h  brainfactory.cc  brainfactory.h  component.cc  component.h  director.cc  director.h  dna.cc  dna.h  dnaview.cc  dnaview.h  event.cc  event.h  eventdata.cc  eventdata.h  eventfactory.cc  eventfactory.h  eventline.cc  eventline.h  eventsource.cc  eventsource.h  factory.cc  factory.h  genericactorfactory.cc  genericactorfactory.h  (+14 more)
april/plugins/: aprilplugininterf.cc  aprilplugininterf.h
april/res/: README
april/tests/: aatokenizer_test.cc  actor.cc  actuator.cc  aprillibrary.cc  apriltokenizer.cc  brain.cc  dna.cc  event.cc  eventline.cc  plugins.cc  reflex.cc  saveload.cc  saveload2.cc  sensor.cc  simplerun.cpp  world.cc
cmake/Modules/: FindCmdTest.cmake  FindLibBBB.cmake
code-docs/v-0-0-1/: AprilDream.html  aamodule_8h.html  aamodule_8h_source.html  aaoutput_8cc.html  aaoutput_8h_source.html  aatokenizer_8cc.html  aatokenizer_8h.html  aaworld_8cc.html  aaworld_8h_source.html  abox2d_8cc.html  abox2d_8h.html  abox2d_8h_source.html  abox3d_8cc.html  abox3d_8h.html  abox3d_8h_source.html  abstract-april.html  abstracta-main_8cc.html  abstracta-main_8cc.js  abstractapril_8cc.html  abstractapril_8h.html  abstractapril_8h_source.html  actor_8cc.html  actor_8cc.js  actor_8h.html  actor_8h_source.html  actorcomp_8cc.html  actorcomp_8cc.js  actorcomp_8h.html  actorcomp_8h_source.html  actorfactory_8cc.html  actorfactory_8cc.js  actorfactory_8h.html  actorfactory_8h_source.html  actuator_8cc.html  actuator_8h.html  actuator_8h_source.html  actuatorfactory_8cc.html  actuatorfactory_8h.html  actuatorfactory_8h_source.html  agui2d_8cc.html  (+656 more)
debian/: control  copyright
ignore-doxydocs/html/: AprilDream.html  aamodule_8cc.html  aaoutput_8h.html  aatokenizer_8h_source.html  aaworld_8cc.js  aaworld_8h.html  abox2d_8cc.html  abox2d_8h.html  abox2d_8h_source.html  abox3d_8cc.html  abox3d_8h.html  abox3d_8h_source.html  abstract-april.html  abstracta-main_8cc.html  abstracta-main_8cc.js  abstractapril_8cc.html  abstractapril_8h.html  abstractapril_8h_source.html  actor_8cc.html  actor_8h.html  actor_8h_source.html  actorcomp_8cc.html  actorcomp_8h.html  actorcomp_8h_source.html  actorfactory_8cc.html  actorfactory_8h.html  actorfactory_8h_source.html  actuator_8cc.html  actuator_8cc.js  actuator_8h.html  actuator_8h_source.html  actuatorfactory_8cc.html  actuatorfactory_8cc.js  actuatorfactory_8h.html  actuatorfactory_8h_source.html  agui2d_8cc.html  agui2d_8h.html  agui2d_8h_source.html  agui3d_8cc.html  agui3d_8h.html  (+675 more)
ignore-site/: index.html
ignore-site/doxygen_ver_0_0_0/: abox2d_8cc.html  abox2d_8h.html  abox2d_8h_source.html  abox3d_8cc.html  abox3d_8h.html  abox3d_8h_source.html  actor_8cc.html  actor_8h.html  actor_8h_source.html  actorcomp_8cc.html  actorcomp_8h.html  actorcomp_8h_source.html  actorfactory_8cc.html  actorfactory_8h.html  actorfactory_8h_source.html  actuator_8cc.html  actuator_8h.html  actuator_8h_source.html  actuatorfactory_8cc.html  actuatorfactory_8h.html  actuatorfactory_8h_source.html  agui2d_8cc.html  agui2d_8h.html  agui2d_8h_source.html  agui3d_8cc.html  agui3d_8h.html  agui3d_8h_source.html  agui_8cc.html  agui_8h.html  agui_8h_source.html  annotated.html  annotated.js  april_8h.html  april_8h.js  april_8h_source.html  april__config_8h.html  april__config_8h.js  april__config_8h_source.html  april__debug_8cc.html  april__debug_8cc.js  (+634 more)
tools/: README
tools/Qt/: README  april.pro  local_defs.pri  local_defs.pri.template
tools/doxygen/: README  doxyfile
tools/nsis/: README
tools/scripts/: README  run-abstracta.sh  tpl.py  winbuild-debug.bat  winbuild-release.bat  winbuild.bat
tools/templ/: README  class_template.cc  class_template.h  dlg_template.cc  dlg_template.h  dlg_template.ui  form_template.cc  form_template.h  form_template.ui  template.cc  template.h  template.py
(+376 files in other folders)
